@@ -1,5 +1,11 @@
 1999-10-06  Von Welch  <vwelch@ncsa.uiuc.edu>
 
+	* Makefile.in: Added build of krb525_check_conf
+
+	* krb525_check_conf.1: Added this file
+
+	* krb525_check_conf.c: Added this file 
+
 	* client.c (argv): Changed type of main() to int
 
 	* server.c (main): Changed type of main() to int
